fix error with calc in project section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -347,7 +347,7 @@ h4 {
                 position: relative;
                 border-radius: 3px;
                 background-color:  #729da0;
-                padding-bottom: calc((33.33333% - 1.875rem)*0.75);
+                padding-bottom: calc(33.33333% *0.75 - 1.875rem);
                 z-index: 4;
                
                 .title, .description {
