--- a/_slicing/src/css/main.scss
+++ b/_slicing/src/css/main.scss
@@ -296,19 +296,34 @@ h4 {
 		}
 	}
 }
+
 .projects {
 	padding: 50px 100px;
 	.grid-container {
 		width: 100%;
 		.grid-x {
 			.cell {
-				--cellWidth: calc(33.33333%;
-				- 1.875rem);
+				--cellWidth: calc(33.33333% - 1.875rem);
 				padding-bottom: calc(var(--cellWidth) * 0.75);
 				position: relative;
 				border-radius: 3px;
 				background-color: #729da0;
 				z-index: 4;
+
+				&:hover img {
+			    	object-position: bottom center;
+			    	transition: all 1s ease-in-out;
+			    }
+
+				img {
+					object-position: top center;
+				    object-fit: cover;
+				    width: 100%;
+				    height: 100%;
+				    position: absolute;
+				}
+
+				
 				.title, .description {
 					color: white;
 					position: absolute;
