--- a/_slicing/src/css/mixins.scss
+++ b/_slicing/src/css/mixins.scss
@@ -12,3 +12,10 @@
     font-size: $size / 16 + rem;
 }
 
+@mixin transition($transition) {
+    -moz-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
+}
+
